--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <application
         android:name=".MyApp"
@@ -28,3 +29,6 @@
     </application>
 
 </manifest>
+
+<!--    android:networkSecurityConfig="@xml/network_security_config"-->
+<!--    android:usesCleartextTraffic="true"-->
