VLA-1 general pool homepage with map

--- a/local.properties
+++ b/local.properties
@@ -8,3 +8,5 @@
 # For customization when using a Version Control System, please read the
 # header note.
 sdk.dir=C\:\\Users\\NTG Clarity\\AppData\\Local\\Android\\Sdk
+
+MAPS_API_KEY=AIzaSyD-4zzGxFX7rM87mArdhm8NvrYRp-uedLs
