--- a/local.properties
+++ b/local.properties
@@ -4,6 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Aug 19 13:07:25 GMT+03:00 2025
-sdk.dir=C\:\\Users\\Renad\\AppData\\Local\\Android\\Sdk
-
+#Sun Aug 24 16:00:51 GMT+03:00 2025
+sdk.dir=C\:\\Users\\Raghad\\AppData\\Local\\Android\\Sdk
