--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
         <!-- Google Maps API Key -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyD-4zzGxFX7rM87mArdhm8NvrYRp-uedLs" />
+            android:value="${MAPS_API_KEY}" />
 
         <activity
             android:name=".MainActivity"
