--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,6 +13,8 @@ composeBom = "2025.08.00"
 loggingInterceptor = "5.1.0"
 navigationCompose = "2.9.3"
 okhttp = "5.1.0"
+pagingRuntimeKtxVersion = "3.3.6"
+pagingComposeVersion = "3.3.6"
 retrofit = "3.0.0"
 googleGmsGoogleServices = "4.4.3"
 firebaseMessaging = "25.0.0"
@@ -39,6 +41,8 @@ androidx-material3 = { group = "androidx.compose.material3", name = "material3" 
 kotlinx-coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "kotlinxCoroutinesAndroid" }
 logging-interceptor = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "loggingInterceptor" }
 okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
+paging-compose = { module = "androidx.paging:paging-compose", version.ref = "pagingComposeVersion" }
+paging-runtime-ktx = { module = "androidx.paging:paging-runtime-ktx", version.ref = "pagingRuntimeKtxVersion" }
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
 firebase-messaging = { group = "com.google.firebase", name = "firebase-messaging", version.ref = "firebaseMessaging" }
 
