--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Aug 24 16:00:51 GMT+03:00 2025
-sdk.dir=C\:\\Users\\Raghad\\AppData\\Local\\Android\\Sdk
+#Tue Aug 26 11:03:16 GMT+03:00 2025
+sdk.dir=C\:\\Users\\NTG Clarity\\AppData\\Local\\Android\\Sdk
