VLA-9 - view my order on map

--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Sun Aug 24 16:00:51 GMT+03:00 2025
-sdk.dir=C\:\\Users\\Raghad\\AppData\\Local\\Android\\Sdk
+sdk.dir=C\:\\Users\\Renad\\AppData\\Local\\Android\\Sdk
