--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Sep 01 14:32:57 AST 2025
-sdk.dir=C\:\\Users\\renad\\AppData\\Local\\Android\\Sdk
+#Tue Sep 02 14:48:30 GMT+03:00 2025
+sdk.dir=C\:\\Users\\NTG Clarity\\AppData\\Local\\Android\\Sdk
